--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
       <button onclick="showSection('productos')">Productos</button>
       <button onclick="showSection('servicios')">Servicios</button>
       <button onclick="showSection('contacto')">Contacto</button>
+
+<div id="carrito-wrapper">
+  <button onclick="toggleCarritoBarra()" id="carrito-toggle">🛒 (<span id="carrito-cantidad">0</span>)</button>
+  <div id="carrito-contenido" class="carrito-contenido">
+    <div id="carrito-lista"></div>
+    <div class="carrito-totales">
+      <p>Total productos: $<span id="carrito-total">0</span></p>
+      <p>Coste de envío: $<span id="carrito-envio">1500</span></p>
+    </div>
+    <button onclick="vaciarCarrito()">Vaciar carrito</button>
+    <button onclick="enviarCarritoPorWhatsApp()">Enviar por WhatsApp</button>
+  </div>
+</div>
+
     </nav>
     <div class="portada">
       <img src="img/LOGO/portada.png" alt="Banner MatiaLR Hardware">
@@ -32,9 +46,6 @@
 
     <section id="productos" class="section">
       <h2>Productos</h2>
- <h3>🛒 Carrito de Compras</h3>
-      <div id="carrito-lista" class="carrito-lista"></div>
-      <button onclick="vaciarCarrito()" class="vaciar-carrito">🧹 Vaciar carrito</button>
       <div class="categorias-menu" id="menu-categorias"></div>
       <div class="subcategorias-menu" id="menu-subcategorias"></div>
       <div class="productos-grid" id="contenedor-productos"></div>
