--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="estilos.css" />
 </head>
 <body>
+<div id="toggle-theme" title="Modo claro/oscuro">🌓</div>
+
   <header>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     <nav id="main-menu">
