--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </nav>
 
     <div class="portada">
-      <img src="img/LOGO/portada.png" alt="Banner MatiaLR Hardware" />
+      <img src="img/LOGO/portada.png" alt="Banner MLR Hardware" />
     </div>
   </header>
 
@@ -66,22 +66,21 @@
 
     <section id="contacto" class="section">
       <h2>Contacto</h2>
-      <p>📧 Email: contacto@matialr.com</p>
+      <p>📧 Email: contacto@mlrhardware.com</p>
       <p>📱 WhatsApp: +54 9 11 1234 5678</p>
-      <p>📸 Instagram: @MatiaLR</p>
-      <p>🎥 YouTube: MatiaLR - Benchmark & Gaming</p>
+      <p>📸 Instagram: @MLRHardware</p>
+      <p>🎥 YouTube: MLR Hardware - Bench & Builds</p>
     </section>
   </div>
 
   <footer>
-    &copy; 2025 MatiaLR Hardware - Todos los derechos reservados
+    &copy; 2025 MLR Hardware - Todos los derechos reservados
   </footer>
 
   <div id="toggle-theme" title="Modo claro/oscuro">🌓</div>
 
   <script src="scripts.js"></script>
   <script>
-    // Activador de modo claro/oscuro
     document.getElementById("toggle-theme").addEventListener("click", () => {
       document.body.classList.toggle("dark-mode");
     });
