--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MLR Hardware</title>
   <link rel="icon" href="img/LOGO/logo.png" type="image/png" />
+  
   <link rel="stylesheet" href="estilos.css" />
+  <link rel="stylesheet" href="tarjetas.css" />
+
 </head>
 <body>
 
