--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
 
   <script src="scripts.js"></script>
   <script src="tema.js" defer></script>
-
+  <script src="car1.js" defer></script>
 </body>
 </html>
